# loudlyproud

./: .coverage  .flake8  .gitignore  .htmlhintrc  .prettierrc  CODE_OF_CONDUCT.md  LICENSE  README.md  extract_tags.py  fields_names.md  hugo.toml  hugo_stats.json  move-slug.py  netlify.toml  package-lock.json  package.json  pagefind.yml  run_tests.ps1  settings.json  tag_analyze.py  tag_cleanup.py  tags_map.json  tailwind.config.js  translation_check.py  tsconfig.json  yaml_formatter.py
.githooks/: pre-commit
.tools/: README.md  book_schema.py  check_content.py  files_concat.py  fix_content.py  language.py  language_analyzer.py  pyproject.toml  reorder_frontmatter.py  requirements.txt  run_tests.py  tag_cleanup.py  tag_tools.py  translation_check.py  update_colors.py  yaml_formatter.py
.tools/docs/: styleguide.md
.tools/fixers/: format_fixes.py  text_fixes.py  yaml_fixes.py
.tools/frontmatter/: __init__.py  autofixer.py  cli.py  constants.py  controller.py  data_fixes.py  extractor.py  fixer_registry.py  reporter.py  scanner.py  schema.py  text_fixes.py  types.py  validator.py  validators.py  yaml_utils.py
.tools/language/: __init__.py  __main__.py  analyzer.py  normalizer.py
.tools/tags/: check_unified.py  clean.py  cleanup.py  common.py  file_ops.py  git_ops.py  monitor.py  normalize.py  registry.py  sorting.py  transform.py  valid_tags.py  validate.py
.tools/tags/tests/: conftest.py  test_clean.py  test_cleanup.py  test_file_ops.py  test_helpers.py  test_monitor.py  test_normalize.py  test_normalizer.py  test_registry.py  test_sorting.py  test_validate.py
.tools/tests/frontmatter/: __init__.py  conftest.py  test_autofixer.py  test_cli.py  test_controller.py  test_extractor.py  test_reporter.py  test_scanner.py  test_validator.py
.tools/tests/tags/: conftest.py  test_clean.py  test_file_ops.py  test_monitor.py  test_normalizer.py  test_registry.py  test_sorting.py
content/: _index.md  test.md  (+1 more)
(+2503 files in other folders)
