[tool.poetry]
name = "loudlyproud-tools"
version = "0.1.0"
description = "Development tools for LoudlyProud project"
readme = "README.md"
packages = [{include = "tags"}, {include = "language"}, {include = "frontmatter"}]

[tool.poetry.dependencies]
python = "^3.13"
ruamel-yaml = "^0.17.0"
click = "^8.0.0"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
verify-content = "frontmatter.cli:main"
tag-tools = "tag_tools:cli"
language-tools = "language:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/test_*.py",
    "*/conftest.py"
]
[tool.coverage.paths]
source = ["tags"]
